[gd_scene load_steps=15 format=1]

[ext_resource path="res://main_camera.gd" type="Script" id=1]
[ext_resource path="res://water_tray/water_tray.tscn" type="PackedScene" id=2]
[ext_resource path="res://fortress/fortress.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/fence.png" type="Texture" id=4]
[ext_resource path="res://sprites/pole.png" type="Texture" id=5]
[ext_resource path="res://UI/ui.gd" type="Script" id=6]
[ext_resource path="res://font1.fnt" type="Font" id=7]
[ext_resource path="res://swine/sprites/triangle.png" type="Texture" id=8]
[ext_resource path="res://swine/sprites/square.png" type="Texture" id=9]
[ext_resource path="res://swine/sprites/intershape.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3509.72, 54.0396 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 52.4543, 3476.91 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.949219, 0.74963, 0.467194, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.94902, 0.74902, 0.466667, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="main_scene" type="Node2D"]

[node name="main_camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 3, 3 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 10.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="water_tray" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -1991.48, 1905.23 )

[node name="water_tray1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 1919.43, -1746.98 )

[node name="water_tray2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -1930.89, -2094.66 )

[node name="water_tray3" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 2063.74, 1973.97 )

[node name="fortress" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 0, -900 )

[node name="fenced" type="Area2D" parent="."]

z/z = -5
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -3500 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 3500 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -3500, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 2 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 3500, 0 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true, "_editor_collapsed":true }

[node name="fence1" type="Sprite" parent="fenced"]

transform/pos = Vector2( 0, -3500 )
transform/scale = Vector2( 2.1902, 1 )
texture = ExtResource( 4 )

[node name="fence2" type="Sprite" parent="fenced"]

transform/pos = Vector2( 0, 3500 )
transform/scale = Vector2( 2.1902, 1 )
texture = ExtResource( 4 )

[node name="fence3" type="Sprite" parent="fenced"]

transform/pos = Vector2( -3500, 0 )
transform/rot = 90.0
transform/scale = Vector2( 2.1902, 1 )
texture = ExtResource( 4 )

[node name="fence4" type="Sprite" parent="fenced"]

transform/pos = Vector2( 3500, 0 )
transform/rot = 90.0
transform/scale = Vector2( 2.1902, 1 )
texture = ExtResource( 4 )

[node name="bound1" type="CollisionShape2D" parent="fenced"]

transform/pos = Vector2( 0, -3500 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="bound2" type="CollisionShape2D" parent="fenced"]

transform/pos = Vector2( 0, 3500 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1
__meta__ = { "_edit_lock_":true }

[node name="bound3" type="CollisionShape2D" parent="fenced"]

transform/pos = Vector2( -3500, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2
__meta__ = { "_edit_lock_":true }

[node name="bound4" type="CollisionShape2D" parent="fenced"]

transform/pos = Vector2( 3500, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 3
__meta__ = { "_edit_lock_":true }

[node name="pole1" type="Sprite" parent="fenced"]

transform/pos = Vector2( -3500, -3500 )
texture = ExtResource( 5 )

[node name="pole2" type="Sprite" parent="fenced"]

transform/pos = Vector2( 3500, -3500 )
texture = ExtResource( 5 )

[node name="pole3" type="Sprite" parent="fenced"]

transform/pos = Vector2( 3500, 3500 )
texture = ExtResource( 5 )

[node name="pole4" type="Sprite" parent="fenced"]

transform/pos = Vector2( -3500, 3500 )
texture = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 6 )
__meta__ = { "_editor_collapsed":true }

[node name="in-game" type="Control" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
__meta__ = { "_edit_lock_":true }

[node name="credits" type="Label" parent="UI/in-game"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
margin/left = 3.0
margin/top = 3.0
margin/right = -220.0
margin/bottom = -4.0
custom_fonts/font = ExtResource( 7 )
text = "Credits: 0"
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="main_menu" type="Control" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
__meta__ = { "_edit_lock_":true }

[node name="main_menu_panel" type="Panel" parent="UI/main_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1604.0
margin/bottom = 905.0
custom_styles/panelf = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="start_button" type="TextureButton" parent="UI/main_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 675.0
margin/top = 233.0
margin/right = 975.0
margin/bottom = 569.0
toggle_mode = false
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/hover = ExtResource( 10 )
__meta__ = { "_edit_lock_":true, "_editor_collapsed":true }

[node name="click_to_go_on_strike" type="Label" parent="UI/main_menu/start_button"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
margin/left = -5.0
margin/top = 362.0
margin/right = 310.0
margin/bottom = 395.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "click to go on strike"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="spawn_points" type="Node2D" parent="."]

[node name="spawn1" type="Position2D" parent="spawn_points"]

transform/pos = Vector2( -3800, -3800 )

[node name="spawn2" type="Position2D" parent="spawn_points"]

transform/pos = Vector2( 3800, -3800 )

[node name="spawn3" type="Position2D" parent="spawn_points"]

transform/pos = Vector2( -3800, 3800 )

[node name="spawn4" type="Position2D" parent="spawn_points"]

transform/pos = Vector2( 3800, 3800 )

[connection signal="pressed" from="UI/main_menu/start_button" to="UI" method="_on_start_button_pressed"]

[connection signal="mouse_enter" from="UI/main_menu/start_button" to="UI" method="_on_start_button_mouse_enter"]

[connection signal="mouse_exit" from="UI/main_menu/start_button" to="UI" method="_on_start_button_mouse_exit"]


